# noble-trader-agent

./: .env.example  .env.local.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  auth_server.py  basic_flask.py  changelog_2026-07-09_23-12-41.md  changelog_2026-07-10_16-16-42.md  changelog_2026-07-10_16-45-00.md  changelog_2026-07-10_17-37-00.md  changelog_2026-07-10_18-05-00.md  changelog_2026-07-10_20-50-00.md  changelog_2026-07-10_22-45-00.md  changelog_2026-07-11_15-45-00.md  changelog_2026-07-11_15-55-00.md  changelog_2026-07-16_web-rebuild.md  clean_server.py  cleanup.bat  cleanup.sh  final_server.py  flask_server.py  middleware.js  minimal_test.py  package.json  pnpm-lock.yaml  proxy.js  pyproject.toml  python_http_server.py  requirements-dev.txt  requirements-optional.txt  requirements.txt  restart_backend.bat  run_clean_server.py  run_server.py  server_dev.py  server_module.py  (+14 more)
.devcontainer/: devcontainer.json
app/: globals.css  layout.js  page.js
components/: AppHeader.js  AppHeader.module.css  AuthScreen.js  AuthScreen.module.css  BatchProgressChart.js  Footer.jsx  Header.jsx  HistoryClient.js  HistoryClient.module.css  HistoryDetail.js  HistoryDetail.module.css  HistoryTable.js  HistoryTable.module.css  MarkovStates.js  MarkovStates.module.css  ResultsPanel.js  ResultsPanel.module.css  RiskManagerClient.js  RiskManagerClient.module.css  RiskSweepChart.js  SessionLog.js  SessionLog.module.css  TradeForm.js  TradeForm.module.css
config/: default.yaml
dashboard/: .env.example  .gitignore  README.md  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: SECURITY_MONITORING.md  agent_onboarding.md  agent_training.md  deployment_design.md  dr_runbook.md  hardening_test_plan.md  mt4_mt5_bridge_spec.md  noble_trader_license_model.md  roadmap.md  secure_configuration_guide.md  security_considerations.md  user_onboarding_guide.md
hooks/: useSizer.js  useSupabase.js
lib/: constants.js  supabase.js
scripts/: _check_loops.ps1  _cron_check.ps1  setup.ps1  (+12 more)
(+227 files in other folders)
