[project]
name = "hermes-trading-platform"
version = "0.1.0"
description = "Hermes — entry/execution optimization layer for Noble Trader signals"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Hermes Team" }]

dependencies = [
    # Config & secrets
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # Database
    "duckdb>=1.0",
    # Redis (async)
    "redis>=5.0",
    # CLI
    "click>=8.1",
    # Logging
    "structlog>=24.1",
    # HTTP (for Supabase REST, venue APIs)
    "httpx>=0.27",
    # Time
    "python-dateutil>=2.9",
    "tzdata>=2024.1",  # Windows needs this for zoneinfo
    # Web dashboard
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",  # for form handling if needed
    # Market data (Phase 2)
    "pyarrow>=15.0",       # Parquet read/write
    "pandas>=2.2",         # Data manipulation for indicators
    "websockets>=12.0",    # Venue WebSocket streams
    "numpy>=1.26",         # Numerical computing for indicators
    # Optimization (Phase 8)
    "optuna>=3.6",         # Bayesian optimization for entry/execution params
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "detect-secrets>=1.4",
    "pre-commit>=3.7",
    "ruff>=0.5",
]
supabase = [
    "supabase>=2.5",
]
venues = [
    "alpaca-py>=0.20",     # Alpaca SDK
]

[project.scripts]
platform = "hermes.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/hermes"]
omit = ["tests/*"]
